<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >




    <item
        android:id="@+id/home_menu_location"
        android:title="Location"
        app:showAsAction="always"
        android:icon="@drawable/icon_location"
        />

    <item
        android:id="@+id/home_menu_my_profile"
        android:title="@string/my_profile"
        android:icon="@drawable/icon_myprofile"
        app:showAsAction="always"/>
    <item
            android:id="@+id/home_menu_settingd"
            android:title="@string/settings"
            app:showAsAction="never" />



    <item
        android:id="@+id/home_menu_contact_us"
        android:title="@string/contact_us"
        app:showAsAction="never"/>

    <item
        android:id="@+id/home_menu_about_us"
        android:title="@string/about_us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/home_menu_logout"
        android:title="@string/logout"
        android:icon="@drawable/icon_logout"
        app:showAsAction="never"/>

</menu>